--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: setup git config
       run: |
-        # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
+        # set user.name 'TF Format', leave user.email empty
         git config user.name "TF Format"
         git config user.email "<>"
 
@@ -26,4 +26,3 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v5
       with: 
         commit_message: terraform fmt
-        
